# Atana

./: .gitignore  README.md
atana/: pom.xml
atana-models/: pom.xml
sfl-service/: Cargo.toml  Dockerfile  Settings.toml
sfl-service/resources/: model.json  testrun.json
sfl-service/resources/cre_server3_16/: coverage_trace_model129136.json  coverage_trace_model129137.json  coverage_trace_model129138.json  coverage_trace_model129139.json  coverage_trace_model129140.json  coverage_trace_model129141.json  coverage_trace_model129142.json  coverage_trace_model129143.json  coverage_trace_model129144.json  coverage_trace_model129145.json  coverage_trace_model129146.json  coverage_trace_model129147.json  coverage_trace_model129148.json  coverage_trace_model129149.json  coverage_trace_model129150.json  coverage_trace_model129151.json  coverage_trace_model129152.json  coverage_trace_model129153.json  coverage_trace_model129154.json  coverage_trace_model129155.json  coverage_trace_model129156.json  coverage_trace_model129157.json  coverage_trace_model129158.json  coverage_trace_model129159.json  coverage_trace_model129160.json  coverage_trace_model129161.json  coverage_trace_model129162.json  coverage_trace_model129163.json  coverage_trace_model129164.json  coverage_trace_model129165.json  model.json
sfl-service/src/: analysis_service.rs  configuration_controller.rs  data_receiving_controller.rs  main.rs  settings.rs  storage_service.rs  test_analysis_controller.rs
sfl-service/src/models/: analysis_result.rs  coverage_matrix.rs  mod.rs  model.rs  test_case.rs
(+70 files in other folders)
